Fix range value bar layout issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -382,6 +382,7 @@ main {
   background-color: var(--themeColor); 
   content:"0";
   height: 8px;
+  left:0;
   margin: 0;
   position: absolute;
   top: 16px;
